gitserver.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: git
spec:
  selector:
    matchLabels:
      app: gitserver
  template:
    metadata:
      labels:
        app: gitserver
    spec:
      containers:
        - image: docker.io/makkes/gitserver:v0.5.0
          name: server
          volumeMounts:
            - mountPath: /srv/git
              name: git-repository-storage
            - mountPath: /etc/ssl
              name: certs
      volumes:
        - persistentVolumeClaim:
            claimName: git-repository-storage
          name: git-repository-storage
        - secret:
            secretName: git-svc-tls
          name: certs
---
apiVersion: v1
kind: Service
metadata:
  name: git
  annotations:
    traefik.ingress.kubernetes.io/service.serverstransport: git@kubernetescrd
spec:
  ports:
    - port: 443
  selector:
    app: gitserver
