git-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: git
  annotations:
        traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: git.${LB_IP}.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: git
                port:
                  number: 443
  tls:
    - hosts:
      - git.${LB_IP}.sslip.io
      secretName: git-ingress-tls
